--- a/css/main.css
+++ b/css/main.css
@@ -25,9 +25,12 @@ html {
 }
 
 .banner {
-
+  position: relative;
+  overflow: hidden;
 }
 
 .banner-content {
-
+  position: absolute;
+  bottom: 0;
+  color: #fff;
 }
