Add maximum height

--- a/css/main.css
+++ b/css/main.css
@@ -27,10 +27,12 @@ html {
 .banner {
   position: relative;
   overflow: hidden;
+  max-height: 100vh;
 }
 
 .banner-content {
   position: absolute;
   bottom: 0;
   color: #fff;
+  left: 10em;
 }
